# COSC-592-Final-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
scripts/: autoencoder.ipynb  test_load_data.ipynb
src/vitis_algs/: __init__.py
src/vitis_algs/data/: __init__.py  datasets.py  loader.py
