[metadata]

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    torch>=2.0
    numpy
    pandas
    scikit-learn
    scipy
    matplotlib
    seaborn
    pyyaml
    biopython
    scikit-bio

[options.packages.find]
where = src
